--- a/de.fhdo.ddmm.eclipse.ui/build.properties
+++ b/de.fhdo.ddmm.eclipse.ui/build.properties
@@ -1,5 +1,7 @@
 source.. = src/,\
            xtend-gen/
 output.. = bin/
-bin.includes = META-INF/,\
-               plugin.xml
+bin.includes = .,\
+               META-INF/,\
+               plugin.xml,\
+               icons/
