Add "About" dialog

--- a/de.fhdo.lemma.eclipse.ui/build.properties
+++ b/de.fhdo.lemma.eclipse.ui/build.properties
@@ -4,4 +4,7 @@ output.. = bin/
 bin.includes = .,\
                META-INF/,\
                plugin.xml,\
-               icons/
+               icons/,\
+               About.md
+
+src.includes = About.md
