--- a/de.fhdo.lemma.utils/build.properties
+++ b/de.fhdo.lemma.utils/build.properties
@@ -1,4 +1,6 @@
 source.. = src/,\
            xtend-gen/
 bin.includes = .,\
-               META-INF/
+               META-INF/,\
+               version.properties
+src.includes = version.properties
