--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,4 @@ build/
 de.fhdo.lemma.live_validation/set_java_home.sh
 de.fhdo.lemma.model_processing/set_java_home.sh
 HOWTO Lemma Release.md
+code generators/de.fhdo.lemma.model_processing.code_generation.java_base/linecnt_helper.py
