--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,4 @@ de.fhdo.lemma.model_processing/set_java_home.sh
 HOWTO Lemma Release.md
 code generators/de.fhdo.lemma.model_processing.code_generation.java_base/linecnt_helper.py
 code generators/TODO*
+.~lock*
