--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,4 @@ HOWTO Lemma Release.md
 code generators/de.fhdo.lemma.model_processing.code_generation.java_base/linecnt_helper.py
 code generators/TODO*
 .~lock*
+*.iml
