--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,4 @@ code generators/de.fhdo.lemma.model_processing.code_generation.java_base/linecnt
 *.iml
 *.hprof
 de.fhdo.lemma.eclipse.ui.editor
+Example*/intermediate/
