Eclipse UI: Make transformation of models in resources selected in the Project Explorer the default action when hitting the "Generate Intermediate Models..." button in the menu.
Add an additional button to "Generate Intermediate Models for Workspace..." to
the menu, which mimics the old behavior of the generate button.

--- a/de.fhdo.lemma.eclipse.ui/plugin.xml
+++ b/de.fhdo.lemma.eclipse.ui/plugin.xml
@@ -57,6 +57,19 @@
                   icon="icons/generateIntermediateModels.gif"
                   id="de.fhdo.lemma.eclipse.ui.lemmaMenu.generateIntermediateModels"
                   label="Generate Intermediate Models...">
+                  <parameter
+                        name="de.fhdo.lemma.eclipse.ui.commands.parameters.selectedModelsOnly"
+                        value="true"/>
+            </command>
+            <command
+                  commandId="de.fhdo.lemma.eclipse.ui.commands.generateIntermediateModels"
+                  mnemonic="W"
+                  icon="icons/generateForWorkspace.png"
+                  id="de.fhdo.lemma.eclipse.ui.lemmaMenu.generateIntermediateModelsForWorkspace"
+                  label="Generate Intermediate Models for Workspace...">
+                  <parameter
+                        name="de.fhdo.lemma.eclipse.ui.commands.parameters.selectedModelsOnly"
+                        value="false"/>
             </command>
             <separator
                   name="aboutSeparator"
@@ -79,6 +92,9 @@
                   icon="icons/generateIntermediateModels.gif"
                   tooltip="Generate Intermediate Models"
                   id="de.fhdo.lemma.eclipse.ui.toolbars.generateIntermediateModels">
+                  <parameter
+                        name="de.fhdo.lemma.eclipse.ui.commands.parameters.selectedModelsOnly"
+                        value="true"/>
             </command>
          </toolbar>
       </menuContribution>
