--- a/de.fhdo.lemma.servicedsl.ui/pom.xml
+++ b/de.fhdo.lemma.servicedsl.ui/pom.xml
@@ -14,6 +14,23 @@
     <packaging>eclipse-plugin</packaging>
     <version>0.7.0-SNAPSHOT</version>
 
+    <profiles>
+        <profile>
+            <id>eclipse-updatesite</id>
+            <activation>
+                <property>
+                    <name>env.LEMMA_UPDATESITE_BUILD</name>
+                    <value>true</value>
+                </property>
+            </activation>
+            <properties>
+                <maven.compiler.source>8</maven.compiler.source>
+                <maven.compiler.target>8</maven.compiler.target>
+                <skipTests>true</skipTests>
+            </properties>
+        </profile>
+    </profiles>
+
     <build>
         <plugins>
             <plugin>
