--- a/de.fhdo.lemma.technology.mappingdsl.parent/pom.xml
+++ b/de.fhdo.lemma.technology.mappingdsl.parent/pom.xml
@@ -21,6 +21,23 @@
         <module>../de.fhdo.lemma.technology.mappingdsl.tests</module>
     </modules>
 
+    <profiles>
+        <profile>
+            <id>eclipse-updatesite</id>
+            <activation>
+                <property>
+                    <name>env.LEMMA_UPDATESITE_BUILD</name>
+                    <value>true</value>
+                </property>
+            </activation>
+            <properties>
+                <maven.compiler.source>8</maven.compiler.source>
+                <maven.compiler.target>8</maven.compiler.target>
+                <skipTests>true</skipTests>
+            </properties>
+        </profile>
+    </profiles>
+
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
