--- a/de.fhdo.lemma.technology.technologydsl.metamodel/pom.xml
+++ b/de.fhdo.lemma.technology.technologydsl.metamodel/pom.xml
@@ -13,6 +13,23 @@
     <artifactId>de.fhdo.lemma.technology.technologydsl.metamodel</artifactId>
     <packaging>eclipse-plugin</packaging>
 
+    <profiles>
+        <profile>
+            <id>eclipse-updatesite</id>
+            <activation>
+                <property>
+                    <name>env.LEMMA_UPDATESITE_BUILD</name>
+                    <value>true</value>
+                </property>
+            </activation>
+            <properties>
+                <maven.compiler.source>8</maven.compiler.source>
+                <maven.compiler.target>8</maven.compiler.target>
+                <skipTests>true</skipTests>
+            </properties>
+        </profile>
+    </profiles>
+
     <dependencies>
         <dependency>
             <groupId>org.eclipse.emf</groupId>
