--- a/de.fhdo.lemma.typechecking/pom.xml
+++ b/de.fhdo.lemma.typechecking/pom.xml
@@ -7,6 +7,23 @@
     <version>0.7.0-SNAPSHOT</version>
     <packaging>eclipse-plugin</packaging>
 
+    <profiles>
+        <profile>
+            <id>eclipse-updatesite</id>
+            <activation>
+                <property>
+                    <name>env.LEMMA_UPDATESITE_BUILD</name>
+                    <value>true</value>
+                </property>
+            </activation>
+            <properties>
+                <maven.compiler.source>8</maven.compiler.source>
+                <maven.compiler.target>8</maven.compiler.target>
+                <skipTests>true</skipTests>
+            </properties>
+        </profile>
+    </profiles>
+
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
