--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,4 @@ code generators/de.fhdo.lemma.model_processing.code_generation.java_base/linecnt
 de.fhdo.lemma.eclipse.ui.editor
 Example*/intermediate/
 howto-lemma-release.md/
+lemma-cd-documentation/
