--- a/de.fhdo.lemma.data.avro/pom.xml
+++ b/de.fhdo.lemma.data.avro/pom.xml
@@ -13,6 +13,44 @@
     <artifactId>de.fhdo.lemma.data.avro</artifactId>
     <packaging>eclipse-plugin</packaging>
 
+    <dependencies>
+        <dependency>
+            <groupId>de.fhdo.lemma</groupId>
+            <artifactId>de.fhdo.lemma.utils</artifactId>
+            <version>${lemma-utils-version}</version>
+        </dependency>
+        <dependency>
+            <groupId>de.fhdo.lemma.data.datadsl</groupId>
+            <artifactId>de.fhdo.lemma.data.datadsl.metamodel</artifactId>
+            <version>${data-metamodel-version}</version>
+        </dependency>
+        <dependency>
+            <groupId>de.fhdo.lemma.data.datadsl</groupId>
+            <artifactId>de.fhdo.lemma.data.datadsl.extractor</artifactId>
+            <version>${data-extractor-version}</version>
+        </dependency>
+        <dependency>
+            <groupId>de.fhdo.lemma.eclipse.ui</groupId>
+            <artifactId>de.fhdo.lemma.eclipse.ui.utils</artifactId>
+            <version>${lemma-ui-utils-version}</version>
+        </dependency>
+        <dependency>
+            <groupId>de.fhdo.lemma.intermediate</groupId>
+            <artifactId>de.fhdo.lemma.data.intermediate.metamodel</artifactId>
+            <version>${intermediate-data-metamodel-version}</version>
+        </dependency>
+        <dependency>
+            <groupId>de.fhdo.lemma.technology.mappingdsl</groupId>
+            <artifactId>de.fhdo.lemma.technology.mappingdsl.metamodel</artifactId>
+            <version>${mapping-extractor-version}</version>
+        </dependency>
+        <dependency>
+            <groupId>de.fhdo.lemma.technology.mappingdsl</groupId>
+            <artifactId>de.fhdo.lemma.technology.mappingdsl.extractor</artifactId>
+            <version>${mapping-metamodel-version}</version>
+        </dependency>
+    </dependencies>
+
     <build>
         <pluginManagement>
             <plugins>
