--- a/de.fhdo.lemma.technology.mappingdsl.extractor/pom.xml
+++ b/de.fhdo.lemma.technology.mappingdsl.extractor/pom.xml
@@ -5,7 +5,7 @@
 
     <parent>
         <relativePath>../de.fhdo.lemma.technology.mappingdsl.parent/pom.xml</relativePath>
-        <groupId>de.fhdo.lemma.data.datadsl</groupId>
+        <groupId>de.fhdo.lemma.technology.mappingdsl</groupId>
         <artifactId>parent</artifactId>
         <version>0.7.0-SNAPSHOT</version>
     </parent>
