--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,4 @@ howto-lemma-release.md/
 lemma-cd-documentation/
 code generators/de.fhdo.lemma.model_processing.code_generation.springcloud.kafka_backup/
 de.fhdo.lemma.eclipse.updatesite/force-deploy.sh
+build/deploy/debug_deploy.sh
