Intermediate Operation Model Transformation: Add intermediate operation model transformation

--- a/de.fhdo.lemma.intermediate.transformations.parent/pom.xml
+++ b/de.fhdo.lemma.intermediate.transformations.parent/pom.xml
@@ -12,6 +12,7 @@
         <module>../de.fhdo.lemma.data.intermediate.metamodel</module>
         <module>../de.fhdo.lemma.service.intermediate.metamodel</module>
         <module>../de.fhdo.lemma.intermediate.transformations</module>
+        <module>../de.fhdo.lemma.operation.intermediate.metamodel</module>
     </modules>
 
     <profiles>
