--- a/de.fhdo.lemma.eclipse.ui/plugin.xml
+++ b/de.fhdo.lemma.eclipse.ui/plugin.xml
@@ -18,6 +18,11 @@
             </commandParameter>
       </command>
       <command
+            name="Generate Operation Intermediate Models"
+            categoryId="de.fhdo.lemma.eclipse.ui.category.lemmaCommands"
+            id="de.fhdo.lemma.eclipse.ui.commands.generateOperationIntermediateModels">
+      </command>
+      <command
             name="About"
             categoryId="de.fhdo.lemma.eclipse.ui.category.lemmaCommands"
             id="de.fhdo.lemma.eclipse.ui.commands.about">
@@ -27,7 +32,11 @@
          point="org.eclipse.ui.handlers">
       <handler
             commandId="de.fhdo.lemma.eclipse.ui.commands.generateIntermediateModels"
-            class="de.fhdo.lemma.eclipse.ui.IntermediateModelTransformationController">
+            class="de.fhdo.lemma.eclipse.ui.IntermediateServiceModelTransformationController">
+      </handler>
+      <handler
+            commandId="de.fhdo.lemma.eclipse.ui.commands.generateOperationIntermediateModels"
+            class="de.fhdo.lemma.eclipse.ui.IntermediateOperationModelTransformationController">
       </handler>
       <handler
             commandId="de.fhdo.lemma.eclipse.ui.commands.about"
@@ -42,6 +51,12 @@
             sequence="M1+5"
             schemeId="org.eclipse.ui.defaultAcceleratorConfiguration">
       </key>
+      <key
+            commandId="de.fhdo.lemma.eclipse.ui.commands.generateOperationIntermediateModels"
+            contextId="org.eclipse.ui.contexts.window"
+            sequence="M1+6"
+            schemeId="org.eclipse.ui.defaultAcceleratorConfiguration">
+      </key>
    </extension>
    <extension
          point="org.eclipse.ui.menus">
@@ -54,7 +69,7 @@
             <command
                   commandId="de.fhdo.lemma.eclipse.ui.commands.generateIntermediateModels"
                   mnemonic="M"
-                  icon="icons/generateIntermediateModels.gif"
+                  icon="icons/generateIntermediateServiceModels.gif"
                   id="de.fhdo.lemma.eclipse.ui.lemmaMenu.generateIntermediateModels"
                   label="Generate Intermediate Models...">
                   <parameter
@@ -70,6 +85,13 @@
                   <parameter
                         name="de.fhdo.lemma.eclipse.ui.commands.parameters.selectedModelsOnly"
                         value="false"/>
+            </command>
+            <command
+                  commandId="de.fhdo.lemma.eclipse.ui.commands.generateOperationIntermediateModels"
+                  mnemonic="M"
+                  icon="icons/generateIntermediateOperationModels.gif"
+                  id="de.fhdo.lemma.eclipse.ui.lemmaMenu.generateIntermediateModels"
+                  label="Generate Intermediate Operation Models...">
             </command>
             <separator
                   name="aboutSeparator"
@@ -89,12 +111,21 @@
                id="de.fhdo.lemma.eclipse.ui.lemmaToolbar">
             <command
                   commandId="de.fhdo.lemma.eclipse.ui.commands.generateIntermediateModels"
-                  icon="icons/generateIntermediateModels.gif"
-                  tooltip="Generate Intermediate Models"
+                  icon="icons/generateIntermediateServiceModels.gif"
+                  tooltip="Generate Intermediate Service Models"
                   id="de.fhdo.lemma.eclipse.ui.toolbars.generateIntermediateModels">
                   <parameter
                         name="de.fhdo.lemma.eclipse.ui.commands.parameters.selectedModelsOnly"
                         value="true"/>
+            </command>
+         </toolbar>
+         <toolbar
+               id="de.fhdo.lemma.eclipse.ui.lemmaToolbar">
+            <command
+                  commandId="de.fhdo.lemma.eclipse.ui.commands.generateOperationIntermediateModels"
+                  icon="icons/generateIntermediateOperationModels.gif"
+                  tooltip="Generate Intermediate Operation Models"
+                  id="de.fhdo.lemma.eclipse.ui.toolbars.generateOperationIntermediateModels">
             </command>
          </toolbar>
       </menuContribution>
@@ -104,7 +135,7 @@
               commandId="de.fhdo.lemma.eclipse.ui.commands.generateIntermediateModels"
               mnemonic="M"
               id="de.fhdo.lemma.eclipse.ui.menus.transformToLemmaModels"
-              icon="icons/generateIntermediateModels.gif"
+              icon="icons/generateIntermediateServiceModels.gif"
               label="Generate Intermediate Models...">
               <visibleWhen>
                 <with variable="activeMenuSelection">
@@ -122,6 +153,37 @@
                                         value="*.mapping" />
                                     <test property="org.eclipse.core.resources.name"
                                         value="*.services" />
+                                </or>
+                            </adapt>
+                        </or>
+                    </iterate>
+                </with>
+              </visibleWhen>
+              <parameter
+                    name="de.fhdo.lemma.eclipse.ui.commands.parameters.selectedModelsOnly"
+                    value="true"/>
+        </command>
+      </menuContribution>
+      <menuContribution
+            locationURI="popup:org.eclipse.ui.navigator.ProjectExplorer#PopupMenu?after=additions">
+        <command
+              commandId="de.fhdo.lemma.eclipse.ui.commands.generateOperationIntermediateModels"
+              mnemonic="M"
+              id="de.fhdo.lemma.eclipse.ui.menus.transformToLemmaOperationModels"
+              icon="icons/generateIntermediateOperationModels.gif"
+              label="Generate Intermediate Operation Models...">
+              <visibleWhen>
+                <with variable="activeMenuSelection">
+                    <iterate
+                        ifEmpty="false">
+                        <or>
+                            <instanceof value="org.eclipse.core.resources.IProject"/>
+                            <instanceof value="org.eclipse.core.resources.IFolder"/>
+                            <instanceof value="org.eclipse.jdt.core.IJavaProject"/>
+                            <adapt type="org.eclipse.core.resources.IResource">
+                                <or>
+                                    <test property="org.eclipse.core.resources.name"
+                                        value="*.operation" />
                                 </or>
                             </adapt>
                         </or>
