--- a/de.fhdo.lemma.eclipse.ui/plugin.xml
+++ b/de.fhdo.lemma.eclipse.ui/plugin.xml
@@ -8,19 +8,24 @@
             id="de.fhdo.lemma.eclipse.ui.category.lemmaCommands">
       </category>
       <command
-            name="Generate Intermediate Models"
+            name="Generate Intermediate Service Models"
             categoryId="de.fhdo.lemma.eclipse.ui.category.lemmaCommands"
-            id="de.fhdo.lemma.eclipse.ui.commands.generateIntermediateModels">
+            id="de.fhdo.lemma.eclipse.ui.commands.generateServiceIntermediateModels">
             <commandParameter
                   id="de.fhdo.lemma.eclipse.ui.commands.parameters.selectedModelsOnly"
-                  name="Generate intermediate models from resources selected in Project Explorer?"
+                  name="Generate intermediate service models from resources selected in Project Explorer?"
                   optional="true">
             </commandParameter>
       </command>
       <command
-            name="Generate Operation Intermediate Models"
+            name="Generate Intermediate Operation Models"
             categoryId="de.fhdo.lemma.eclipse.ui.category.lemmaCommands"
             id="de.fhdo.lemma.eclipse.ui.commands.generateOperationIntermediateModels">
+            <commandParameter
+                  id="de.fhdo.lemma.eclipse.ui.commands.parameters.selectedModelsOnly"
+                  name="Generate intermediate operation models from resources selected in Project Explorer?"
+                  optional="true">
+            </commandParameter>
       </command>
       <command
             name="About"
@@ -31,7 +36,7 @@
    <extension
          point="org.eclipse.ui.handlers">
       <handler
-            commandId="de.fhdo.lemma.eclipse.ui.commands.generateIntermediateModels"
+            commandId="de.fhdo.lemma.eclipse.ui.commands.generateServiceIntermediateModels"
             class="de.fhdo.lemma.eclipse.ui.IntermediateServiceModelTransformationController">
       </handler>
       <handler
@@ -44,21 +49,6 @@
       </handler>
    </extension>
    <extension
-         point="org.eclipse.ui.bindings">
-      <key
-            commandId="de.fhdo.lemma.eclipse.ui.commands.generateIntermediateModels"
-            contextId="org.eclipse.ui.contexts.window"
-            sequence="M1+5"
-            schemeId="org.eclipse.ui.defaultAcceleratorConfiguration">
-      </key>
-      <key
-            commandId="de.fhdo.lemma.eclipse.ui.commands.generateOperationIntermediateModels"
-            contextId="org.eclipse.ui.contexts.window"
-            sequence="M1+6"
-            schemeId="org.eclipse.ui.defaultAcceleratorConfiguration">
-      </key>
-   </extension>
-   <extension
          point="org.eclipse.ui.menus">
       <menuContribution
             locationURI="menu:org.eclipse.ui.main.menu?after=additions">
@@ -67,31 +57,48 @@
                mnemonic="D"
                id="de.fhdo.lemma.eclipse.ui.lemmaMenu">
             <command
-                  commandId="de.fhdo.lemma.eclipse.ui.commands.generateIntermediateModels"
+                  commandId="de.fhdo.lemma.eclipse.ui.commands.generateServiceIntermediateModels"
                   mnemonic="M"
                   icon="icons/generateIntermediateServiceModels.gif"
-                  id="de.fhdo.lemma.eclipse.ui.lemmaMenu.generateIntermediateModels"
-                  label="Generate Intermediate Models...">
+                  id="de.fhdo.lemma.eclipse.ui.lemmaMenu.generateServiceIntermediateModels"
+                  label="Generate Intermediate Service Models...">
                   <parameter
                         name="de.fhdo.lemma.eclipse.ui.commands.parameters.selectedModelsOnly"
                         value="true"/>
             </command>
             <command
-                  commandId="de.fhdo.lemma.eclipse.ui.commands.generateIntermediateModels"
+                  commandId="de.fhdo.lemma.eclipse.ui.commands.generateServiceIntermediateModels"
                   mnemonic="W"
                   icon="icons/generateForWorkspace.png"
-                  id="de.fhdo.lemma.eclipse.ui.lemmaMenu.generateIntermediateModelsForWorkspace"
-                  label="Generate Intermediate Models for Workspace...">
+                  id="de.fhdo.lemma.eclipse.ui.lemmaMenu.generateServiceIntermediateModelsForWorkspace"
+                  label="Generate Intermediate Service Models for Workspace...">
                   <parameter
                         name="de.fhdo.lemma.eclipse.ui.commands.parameters.selectedModelsOnly"
                         value="false"/>
             </command>
+            <separator
+                  name="languageSeparator"
+                  visible="true">
+            </separator>
             <command
                   commandId="de.fhdo.lemma.eclipse.ui.commands.generateOperationIntermediateModels"
                   mnemonic="M"
                   icon="icons/generateIntermediateOperationModels.gif"
-                  id="de.fhdo.lemma.eclipse.ui.lemmaMenu.generateIntermediateModels"
+                  id="de.fhdo.lemma.eclipse.ui.lemmaMenu.generateServiceIntermediateModels"
                   label="Generate Intermediate Operation Models...">
+                  <parameter
+                        name="de.fhdo.lemma.eclipse.ui.commands.parameters.selectedModelsOnly"
+                        value="true"/>
+            </command>
+            <command
+                  commandId="de.fhdo.lemma.eclipse.ui.commands.generateOperationIntermediateModels"
+                  mnemonic="W"
+                  icon="icons/generateForWorkspace.png"
+                  id="de.fhdo.lemma.eclipse.ui.lemmaMenu.generateOperationIntermediateModelsForWorkspace"
+                  label="Generate Intermediate Operation Models for Workspace...">
+                  <parameter
+                        name="de.fhdo.lemma.eclipse.ui.commands.parameters.selectedModelsOnly"
+                        value="false"/>
             </command>
             <separator
                   name="aboutSeparator"
@@ -110,10 +117,10 @@
          <toolbar
                id="de.fhdo.lemma.eclipse.ui.lemmaToolbar">
             <command
-                  commandId="de.fhdo.lemma.eclipse.ui.commands.generateIntermediateModels"
+                  commandId="de.fhdo.lemma.eclipse.ui.commands.generateServiceIntermediateModels"
                   icon="icons/generateIntermediateServiceModels.gif"
                   tooltip="Generate Intermediate Service Models"
-                  id="de.fhdo.lemma.eclipse.ui.toolbars.generateIntermediateModels">
+                  id="de.fhdo.lemma.eclipse.ui.toolbars.generateServiceIntermediateModels">
                   <parameter
                         name="de.fhdo.lemma.eclipse.ui.commands.parameters.selectedModelsOnly"
                         value="true"/>
@@ -126,17 +133,20 @@
                   icon="icons/generateIntermediateOperationModels.gif"
                   tooltip="Generate Intermediate Operation Models"
                   id="de.fhdo.lemma.eclipse.ui.toolbars.generateOperationIntermediateModels">
+                  <parameter
+                        name="de.fhdo.lemma.eclipse.ui.commands.parameters.selectedModelsOnly"
+                        value="true"/>
             </command>
          </toolbar>
       </menuContribution>
       <menuContribution
             locationURI="popup:org.eclipse.ui.popup.any?after=additions">
         <command
-              commandId="de.fhdo.lemma.eclipse.ui.commands.generateIntermediateModels"
+              commandId="de.fhdo.lemma.eclipse.ui.commands.generateServiceIntermediateModels"
               mnemonic="M"
               id="de.fhdo.lemma.eclipse.ui.menus.transformToLemmaModels"
               icon="icons/generateIntermediateServiceModels.gif"
-              label="Generate Intermediate Models...">
+              label="Generate Intermediate Service Models...">
               <visibleWhen>
                 <with variable="activeMenuSelection">
                     <iterate
@@ -165,7 +175,7 @@
         </command>
       </menuContribution>
       <menuContribution
-            locationURI="popup:org.eclipse.ui.navigator.ProjectExplorer#PopupMenu?after=additions">
+            locationURI="popup:org.eclipse.ui.popup.any?after=additions">
         <command
               commandId="de.fhdo.lemma.eclipse.ui.commands.generateOperationIntermediateModels"
               mnemonic="M"
