Remove .DS_Store files from repository

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,4 @@ lemma-cd-documentation/
 code generators/de.fhdo.lemma.model_processing.code_generation.springcloud.kafka_backup/
 de.fhdo.lemma.eclipse.updatesite/force-deploy.sh
 build/deploy/debug_deploy.sh
+.DS_Store
