Add Python script to generalize and facilitate the execution of LEMMA model processors in Docker containers

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,4 @@ code generators/de.fhdo.lemma.model_processing.code_generation.springcloud.kafka
 de.fhdo.lemma.eclipse.updatesite/force-deploy.sh
 build/deploy/debug_deploy.sh
 .DS_Store
+__pycache__/
