--- a/code generators/de.fhdo.lemma.model_processing.code_generation.mariadb/pom.xml
+++ b/code generators/de.fhdo.lemma.model_processing.code_generation.mariadb/pom.xml
@@ -124,7 +124,7 @@
                 <finalName>${artifactId}-${project.version}-standalone</finalName>
                 <archive>
                   <manifest>
-                    <mainClass>de.fhdo.lemma.model_processing.code_generation.container_base.ContainerBaseGenerator</mainClass>
+                    <mainClass>de.fhdo.lemma.model_processing.code_generation.mariadb.MariaDBGenerator</mainClass>
                   </manifest>
                 </archive>
                 <descriptors>
