--- a/code generators/de.fhdo.lemma.model_processing.code_generation.mongodb/pom.xml
+++ b/code generators/de.fhdo.lemma.model_processing.code_generation.mongodb/pom.xml
@@ -125,7 +125,7 @@
                 <finalName>${artifactId}-${project.version}-standalone</finalName>
                 <archive>
                   <manifest>
-                    <mainClass>de.fhdo.lemma.model_processing.code_generation.container_base.ContainerBaseGenerator</mainClass>
+                    <mainClass>de.fhdo.lemma.model_processing.code_generation.mongodb.MongoDBGenerator</mainClass>
                   </manifest>
                 </archive>
                 <descriptors>
