LEMMA Examples: Move examples to "examples" directory and give them sensible names

--- a/examples/e-vehicle-charging/.project
+++ b/examples/e-vehicle-charging/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Example</name>
+	<name>e-vehicle-charging</name>
 	<comment></comment>
 	<projects>
 	</projects>
