--- a/examples/parking-spaces/.project
+++ b/examples/parking-spaces/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Example-3</name>
+	<name>parking-spaces</name>
 	<comment></comment>
 	<projects>
 	</projects>
