Operation-related code generators: Fix build warning.
Rename "${artifactId}" to "${project.artifactId}", because the former is deprecated.

--- a/code generators/de.fhdo.lemma.model_processing.code_generation.mongodb/pom.xml
+++ b/code generators/de.fhdo.lemma.model_processing.code_generation.mongodb/pom.xml
@@ -122,7 +122,7 @@
               <version>${maven-assembly.verion}</version>
               <configuration>
                <appendAssemblyId>false</appendAssemblyId>
-                <finalName>${artifactId}-${project.version}-standalone</finalName>
+                <finalName>${project.artifactId}-${project.version}-standalone</finalName>
                 <archive>
                   <manifest>
                     <mainClass>de.fhdo.lemma.model_processing.code_generation.mongodb.MongoDBGenerator</mainClass>
