--- a/code generators/de.fhdo.lemma.model_processing.code_generation.container_base/pom.xml
+++ b/code generators/de.fhdo.lemma.model_processing.code_generation.container_base/pom.xml
@@ -117,7 +117,7 @@
               <version>${maven-assembly.verion}</version>
               <configuration>
                <appendAssemblyId>false</appendAssemblyId>
-                <finalName>${artifactId}-${project.version}-standalone</finalName>
+                <finalName>${project.artifactId}-${project.version}-standalone</finalName>
                 <archive>
                   <manifest>
                     <mainClass>de.fhdo.lemma.model_processing.code_generation.container_base.ContainerBaseGenerator</mainClass>
