--- a/code generators/de.fhdo.lemma.model_processing.code_generation.springcloud.zuul/pom.xml
+++ b/code generators/de.fhdo.lemma.model_processing.code_generation.springcloud.zuul/pom.xml
@@ -121,7 +121,7 @@
               <version>${maven-assembly.verion}</version>
               <configuration>
                <appendAssemblyId>false</appendAssemblyId>
-                <finalName>${artifactId}-${project.version}-standalone</finalName>
+                <finalName>${project.artifactId}-${project.version}-standalone</finalName>
                 <archive>
                   <manifest>
                     <mainClass>de.fhdo.lemma.model_processing.code_generation.springcloud.zuul.ZuulCodeGenerator</mainClass>
