Ignore CSS validation errors in Sphinx-generated "doc" folders within intermediate metamodel projects

--- a/de.fhdo.lemma.data.intermediate.metamodel/.project
+++ b/de.fhdo.lemma.data.intermediate.metamodel/.project
@@ -31,4 +31,15 @@
 		<nature>org.eclipse.jdt.core.javanature</nature>
 		<nature>org.eclipse.xtext.ui.shared.xtextNature</nature>
 	</natures>
+	<filteredResources>
+		<filter>
+			<id>1610789448839</id>
+			<name></name>
+			<type>26</type>
+			<matcher>
+				<id>org.eclipse.ui.ide.multiFilter</id>
+				<arguments>1.0-name-matches-false-false-doc</arguments>
+			</matcher>
+		</filter>
+	</filteredResources>
 </projectDescription>
