--- a/code generators/de.fhdo.lemma.model_processing.code_generation.java_base/docker/execution.yaml
+++ b/code generators/de.fhdo.lemma.model_processing.code_generation.java_base/docker/execution.yaml
@@ -10,6 +10,11 @@
     - main
     - --code_generation_serializer=args.pattern
     - --alternative_intermediate_service_model=args.alternativeIntermediateServiceModel?
+    - --genlet=/home/genlets/de.fhdo.lemma.model_processing.code_generation.ddd.jar
+    - --genlet=/home/genlets/de.fhdo.lemma.model_processing.code_generation.springcloud.jar
+    - --genlet=/home/genlets/de.fhdo.lemma.model_processing.code_generation.springcloud.cqrs.jar
+    - --genlet=/home/genlets/de.fhdo.lemma.model_processing.code_generation.springcloud.domain_events.jar
+    - --genlet=/home/genlets/de.fhdo.lemma.model_processing.code_generation.springcloud.kafka.jar
 
 - required_args:
   - builtin:
