--- a/de.fhdo.lemma.servicedsl.ui/build.properties
+++ b/de.fhdo.lemma.servicedsl.ui/build.properties
@@ -3,5 +3,6 @@ source.. = src/,\
            xtend-gen/
 bin.includes = .,\
                META-INF/,\
-               plugin.xml
+               plugin.xml,\
+               lib/commons-lang3-3.7.jar
 bin.excludes = **/*.xtend
