External Imports: adds export of openapi parts from eclipse.ui plugin for the quickfix

--- a/de.fhdo.lemma.servicedsl.parent/pom.xml
+++ b/de.fhdo.lemma.servicedsl.parent/pom.xml
@@ -19,6 +19,7 @@
         -->
         <!-- <module>../de.fhdo.lemma.servicedsl.ui</module>
         <module>../de.fhdo.lemma.servicedsl.ui.tests</module>-->
+        <module>../de.fhdo.lemma.servicedsl.ui</module>
         <module>../de.fhdo.lemma.servicedsl.tests</module>
         <module>../de.fhdo.lemma.technology.technologydsl.metamodel</module>
     </modules>
