--- a/de.fhdo.lemma.servicedsl.ui/pom.xml
+++ b/de.fhdo.lemma.servicedsl.ui/pom.xml
@@ -13,6 +13,15 @@
     <packaging>eclipse-plugin</packaging>
     <version>0.8.0-SNAPSHOT</version>
 
+    <dependencies>
+        <!-- LEMMA UI Dependencies -->
+        <dependency>
+            <groupId>de.fhdo.lemma.eclipse.ui</groupId>
+            <artifactId>de.fhdo.lemma.eclipse.ui</artifactId>
+            <version>${lemma-utils-version}</version>
+        </dependency>
+    </dependencies>
+
     <profiles>
         <profile>
             <id>eclipse-updatesite</id>
