External Imports: changes build order of plugins

--- a/de.fhdo.lemma.servicedsl.ui/pom.xml
+++ b/de.fhdo.lemma.servicedsl.ui/pom.xml
@@ -18,7 +18,7 @@
         <dependency>
             <groupId>de.fhdo.lemma.eclipse.ui</groupId>
             <artifactId>de.fhdo.lemma.eclipse.ui</artifactId>
-            <version>${lemma-ui-version}</version>
+            <version>${project.version}</version>
         </dependency>
     </dependencies>
 
