--- a/de.fhdo.lemma.operationdsl.parent/pom.xml
+++ b/de.fhdo.lemma.operationdsl.parent/pom.xml
@@ -67,6 +67,7 @@
         <emf-version>2.22.0</emf-version>
         <exec-maven-plugin-version>3.0.0</exec-maven-plugin-version>
         <lifecycle-mapping-version>1.0.0</lifecycle-mapping-version>
+        <lsp4j-version>0.10.0</lsp4j-version>
         <maven-assembly-plugin-version>3.3.0</maven-assembly-plugin-version>
         <maven-clean-plugin-version>3.1.0</maven-clean-plugin-version>
         <maven-compiler-plugin-version>3.8.1</maven-compiler-plugin-version>
@@ -82,6 +83,12 @@
             <id>eclipse</id>
             <layout>p2</layout>
             <url>http://download.eclipse.org/releases/${eclipse-version}/</url>
+        </repository>
+
+        <repository>
+            <id>lsp4j</id>
+            <layout>p2</layout>
+            <url>https://download.eclipse.org/lsp4j/updates/releases/${lsp4j-version}</url>
         </repository>
 
         <repository>
