--- a/de.fhdo.lemma.eclipse.ui.parent/pom.xml
+++ b/de.fhdo.lemma.eclipse.ui.parent/pom.xml
@@ -47,13 +47,15 @@
         <maven.compiler.target>11</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-        <build-helper-maven-plugin-version>3.1.0</build-helper-maven-plugin-version>
+        <atl-version>4.4.0</atl-version>
+        <build-helper-maven-plugin-version>3.2.0</build-helper-maven-plugin-version>
         <eclipse-version>2021-03</eclipse-version>
         <live-validation-version>${project.version}</live-validation-version>
         <lsp4j-version>0.9.0</lsp4j-version>
         <maven-clean-plugin-version>3.1.0</maven-clean-plugin-version>
         <maven-compiler-plugin-version>3.8.1</maven-compiler-plugin-version>
-        <tycho-version>1.7.0</tycho-version>
+        <tycho-version>2.3.0</tycho-version>
+        <xtext-version>2.25.0</xtext-version>
     </properties>
 
     <repositories>
@@ -67,6 +69,26 @@
             <id>lsp4j</id>
             <layout>p2</layout>
             <url>https://download.eclipse.org/lsp4j/updates/releases/${lsp4j-version}</url>
+        </repository>
+
+        <repository>
+            <id>ATL Update Site</id>
+            <layout>p2</layout>
+            <url>http://download.eclipse.org/mmt/atl/updates/releases/${atl-version}/</url>
+        </repository>
+
+        <!--
+            Strangely, we require this repository to enable the build of the UI parent plugin, which
+            otherwise fails due to missing ATL dependencies (required transitively due to the
+            plugin's dependency on the de.fhdo.lemma.intermediate.transformations plugin). However,
+            we would have expected the resolution of the ATL dependencies from the "ATL Update Site"
+            (see above) as it works for the Transformations plugin. Yet, the resolution does not
+            seem to work for the transitive dependency in the UI parent plugin.
+        -->
+        <repository>
+            <id>Eclipse Default</id>
+            <layout>default</layout>
+            <url>https://repo.eclipse.org/content/groups/releases/</url>
         </repository>
     </repositories>
 
