--- a/de.fhdo.lemma.intermediate.transformations.parent/pom.xml
+++ b/de.fhdo.lemma.intermediate.transformations.parent/pom.xml
@@ -48,7 +48,8 @@
         <maven.compiler.target>11</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-        <build-helper-maven-plugin-version>3.1.0</build-helper-maven-plugin-version>
+        <atl-version>4.4.0</atl-version>
+        <build-helper-maven-plugin-version>3.2.0</build-helper-maven-plugin-version>
         <data-viewpoint-metamodel-version>${project.version}</data-viewpoint-metamodel-version>
         <eclipse-version>2021-03</eclipse-version>
         <intermediate-data-metamodel-version>${project.version}</intermediate-data-metamodel-version>
@@ -57,8 +58,8 @@
         <maven-compiler-plugin-version>3.8.1</maven-compiler-plugin-version>
         <service-viewpoint-metamodel-version>${project.version}</service-viewpoint-metamodel-version>
         <technology-definition-metamodel-version>${project.version}</technology-definition-metamodel-version>
-        <tycho-version>1.7.0</tycho-version>
-        <xtext-version>2.21.0</xtext-version>
+        <tycho-version>2.3.0</tycho-version>
+        <xtext-version>2.25.0</xtext-version>
     </properties>
 
     <repositories>
@@ -66,6 +67,12 @@
             <id>eclipse</id>
             <layout>p2</layout>
             <url>http://download.eclipse.org/releases/${eclipse-version}/</url>
+        </repository>
+
+        <repository>
+            <id>ATL Update Site</id>
+            <layout>p2</layout>
+            <url>http://download.eclipse.org/mmt/atl/updates/releases/${atl-version}/</url>
         </repository>
 
         <repository>
