--- a/de.fhdo.lemma.operationdsl.parent/pom.xml
+++ b/de.fhdo.lemma.operationdsl.parent/pom.xml
@@ -54,26 +54,27 @@
         <maven.compiler.target>11</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-        <build-helper-maven-plugin-version>3.1.0</build-helper-maven-plugin-version>
+        <build-helper-maven-plugin-version>3.2.0</build-helper-maven-plugin-version>
         <lemma-utils-version>${project.version}</lemma-utils-version>
         <eclipse-version>2021-03</eclipse-version>
-        <ecore-xcore-version>1.3.1</ecore-xcore-version>
-        <ecore-xtext-version>1.4.0</ecore-xtext-version>
-        <emf-version>2.18.0</emf-version>
         <!--
-            Xtext seems to rely on version 1.4.0 of the exec-maven-plugin-version. Version 1.6.0 of
-            the plugin results in an NPE.
+            Last version with which Xtext bundling seems to be trivially feasible. Newer versions
+            include ANTLR, which can lead to version clashes in Gradle projects including both Xtext
+            and Xcore dependencies.
         -->
-        <exec-maven-plugin-version>1.4.0</exec-maven-plugin-version>
+        <ecore-xcore-version>1.3.1</ecore-xcore-version>
+        <ecore-xtext-version>1.5.0</ecore-xtext-version>
+        <emf-version>2.22.0</emf-version>
+        <exec-maven-plugin-version>3.0.0</exec-maven-plugin-version>
         <lifecycle-mapping-version>1.0.0</lifecycle-mapping-version>
-        <maven-assembly-plugin-version>3.2.0</maven-assembly-plugin-version>
+        <maven-assembly-plugin-version>3.3.0</maven-assembly-plugin-version>
         <maven-clean-plugin-version>3.1.0</maven-clean-plugin-version>
         <maven-compiler-plugin-version>3.8.1</maven-compiler-plugin-version>
         <metamodel-version>${project.version}</metamodel-version>
-        <org-eclipse-emf-mwe2-launch-version>2.11.2</org-eclipse-emf-mwe2-launch-version>
-        <tycho-version>1.7.0</tycho-version>
-        <versions-maven-plugin-version>2.7</versions-maven-plugin-version>
-        <xtext-version>2.21.0</xtext-version>
+        <org-eclipse-emf-mwe2-launch-version>2.12.1</org-eclipse-emf-mwe2-launch-version>
+        <tycho-version>2.3.0</tycho-version>
+        <versions-maven-plugin-version>2.8.1</versions-maven-plugin-version>
+        <xtext-version>2.25.0</xtext-version>
     </properties>
 
     <repositories>
