--- a/de.fhdo.lemma.eclipse.ui.parent/pom.xml
+++ b/de.fhdo.lemma.eclipse.ui.parent/pom.xml
@@ -10,8 +10,7 @@
 
     <modules>
         <module>../de.fhdo.lemma.eclipse.ui</module>
-        <!-- Required for Live Validation, ignore for now -->
-        <!-- <module>../de.fhdo.lemma.eclipse.ui.editor</module> -->
+        <module>../de.fhdo.lemma.eclipse.ui.editor</module>
     </modules>
 
     <profiles>
@@ -51,9 +50,10 @@
         <build-helper-maven-plugin-version>3.2.0</build-helper-maven-plugin-version>
         <eclipse-version>2021-03</eclipse-version>
         <live-validation-version>${project.version}</live-validation-version>
-        <lsp4j-version>0.9.0</lsp4j-version>
+        <lsp4j-version>0.10.0</lsp4j-version>
         <maven-clean-plugin-version>3.1.0</maven-clean-plugin-version>
         <maven-compiler-plugin-version>3.8.1</maven-compiler-plugin-version>
+        <maven-dependency-plugin-version>3.1.2</maven-dependency-plugin-version>
         <tycho-version>2.3.0</tycho-version>
         <xtext-version>2.25.0</xtext-version>
     </properties>
