Java Base Generator: Make source model an optional argument in model processor execution specification

--- a/code generators/de.fhdo.lemma.model_processing.code_generation.java_base/docker/execution.yaml
+++ b/code generators/de.fhdo.lemma.model_processing.code_generation.java_base/docker/execution.yaml
@@ -18,11 +18,12 @@
 
 - required_args:
   - builtin:
-    - source_model: "path to source service or mapping model (must be relative to model base path)"
     - intermediate_model: "path to intermediate service or mapping model (must be relative to model base path)"
     - target_folder: "path to generation target folder"
 
 - optional_args:
+  - builtin:
+    - source_model: "path to source service or mapping model (must be relative to model base path)"
   - custom:
     - pattern:
         - option: "-p"
