Service DSL: Remove unused dependency on Data DSL tests project

--- a/code generators/de.fhdo.lemma.model_processing.code_generation.container_base/pom.xml
+++ b/code generators/de.fhdo.lemma.model_processing.code_generation.container_base/pom.xml
@@ -67,6 +67,16 @@
         </dependency>
         <dependency>
             <groupId>de.fhdo.lemma.intermediate</groupId>
+            <artifactId>de.fhdo.lemma.data.intermediate.metamodel</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>de.fhdo.lemma.intermediate</groupId>
+            <artifactId>de.fhdo.lemma.service.intermediate.metamodel</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>de.fhdo.lemma.intermediate</groupId>
             <artifactId>de.fhdo.lemma.operation.intermediate.metamodel</artifactId>
             <version>${project.version}</version>
         </dependency>
